2009-01-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Initial upload to TYPO3 Forge
	* Cleanup: Use UNIX line separators in all files
	* Fix for current TYPO3 trunk (4.3-dev) caching
	* Update version number to 1.1.1
	* Default to local installation