@@ -5,3 +5,4 @@
 	* Fix for current TYPO3 trunk (4.3-dev) caching
 	* Update version number to 1.1.1
 	* Default to local installation
+	* Fixed bug #10132: sr_freecap seems to work only with default language
